fdo#37816: Fix a crasher in datapilot table when moving a field button.